--- a/CreArte/Views/Shared/header.cshtml
+++ b/CreArte/Views/Shared/header.cshtml
@@ -18,6 +18,7 @@
         { "clientes", "Clientes" },
         { "productos", "Productos" },
         { "inventario", "Inventario" },
+        { "kardex", "Kardex" },
         { "compras", "Compras" },
         { "proveedores", "Proveedores" },
         { "empleados", "Empleados" },
