--- a/CreArte/Views/Inventario/Index.cshtml
+++ b/CreArte/Views/Inventario/Index.cshtml
@@ -28,14 +28,14 @@
 
         <div class="d-flex align-items-center gap-2">
             <!-- STOCK ALTO: limpia SoloStockBajo -->
-            <a href="#" class="ua-btn ua-btn-new" id="btnStockAlto" title="Quitar filtro de stock bajo">
-                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M7 2v20h2V2H7zm4 2v16h2V4h-2zm4 4v12h2V8h-2z"/></svg>
+            <a href="#" class="ua-btn btn-agregate" id="btnStockAlto" title="Quitar filtro de stock bajo">
+                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 3v18h18v-2H5V3H3zm4 14h2v-6H7v6zm4 0h2V9h-2v8zm4 0h2V5h-2v12z"/></svg>
                 STOCK ALTO
             </a>
 
             <!-- STOCK BAJO: fuerza SoloStockBajo=true -->
-            <a href="#" class="ua-btn ua-btn-edit" id="btnStockBajo" title="Mostrar sólo stock bajo">
-                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M7 2v20h2V2H7zm4 8v12h2V10h-2zm4 6v6h2v-6h-2z"/></svg>
+            <a href="#" class="ua-btn btn-anular" id="btnStockBajo" title="Mostrar sólo stock bajo">
+                <svg viewBox="0 0 24 24" fill="currentColor"><path d="M3 21h18v-2H5V3H3v18zm4-2h2v-6H7v6zm4 0h2v-4h-2v4zm4 0h2v-10h-2v10z"/></svg>
                 STOCK BAJO
             </a>
         </div>
